# SysMonk

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: constant.rs  lib.rs  main.rs
src/deprecated/: cpu_brand.rs  disks.rs  mod.rs
src/legacy/: cpu.rs  cpu_brand.rs  disks.rs  gpu.rs  helper.rs  mod.rs
src/resources/: disks.rs  info.rs  mod.rs  network.rs  operations.rs  processor.rs  stream.rs  system.rs
src/routes/: auth.rs  basics.rs  mod.rs  monitor.rs  websocket.rs
src/squire/: authenticator.rs  custom.rs  mod.rs  parser.rs  secure.rs  settings.rs  startup.rs  util.rs
src/system_info/: mod.rs  network.rs  sys_info.rs
src/templates/: error.rs  index.rs  logout.rs  mod.rs  monitor.rs  session.rs  unauthorized.rs
